# pylibczirw

./: .mega-linter.yml  API.md  requirements_test.txt  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/steps_package/: action.yml
.github/workflows/: build-reusable.yml  mega-linter.yml
_pylibCZIrw/src/api/: CMakeLists.txt  CZIeditAPI.cpp  CZIeditAPI.h  CZIreadAPI.cpp  CZIreadAPI.h  ReaderOptions.h
_pylibCZIrw/src/bindings/: CMakeLists.txt  CZIrw.cpp
_pylibCZIrw/tests/: CMakeLists.txt  edit_metadata_tests.cpp
pylibCZIrw/: czi.py
pylibCZIrw/tests/integration/metadata/: test_edit_metadata.py
pylibCZIrw/tests/integration/read/: test_subblock_enumeration.py
pylibCZIrw/tests/unit/: test_czi_editor.py  test_subblock_enumeration.py
templates/: CHANGELOG.md.j2
